# Banshee-Firmware

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: logging.rs  main.rs  panic.rs  sensor.rs  serial.rs  status.rs  time.rs  usb.rs
src/sensors/: pm.rs
