[package]
name = "banshee"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"

[[bin]]
name = "banshee"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
modbus-rtu = { git = "ssh://git@github.com/PjSWhite/ModbusRTU-rs.git", rev = "2d430e0c", version = "0.1.1" }
pms7003-rs = { git = "ssh://git@github.com/PjSWhite/pms7003-rs.git", rev = "81ffbfe2", features = [
  "rp2040-impl",
] }

bme280 = "0.5.1"
sgp40 = "1.0.0"
sx127x_lora = "0.3.1"

rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.12.0", features = ["rt", "critical-section-impl"] }
rp2040-panic-usb-boot = "0.6.0"

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"

# defmt = "1.0.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"

heapless = "0.9.2"
# lora-phy = "3.0.1"

once_cell = { version = "1.21.4", default-features = false, features = [
  "critical-section",
] }

portable-atomic = { version = "1.13.1", features = ["critical-section"] }

usb-device = "0.3.2"
usbd-serial = "0.2.2"
